--- a/index.html
+++ b/index.html
@@ -13,9 +13,31 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>Net Ninja Pro</h1>
+    <!-- navbar -->
+
+    <!-- main image & intro text -->
+    <section class="intro">
+      <div class="container-lg">
+        <div class="row justify-content-center align-items-center">
+          <div class="col-md-5 text-center text-md-start">
+            <h1>
+              <div class="display-2">Black-Belt</div>
+              <div class="display-5 text-muted">Your Coding Skills</div>
+            </h1>
+            <p class="lead my-4 text-muted">
+              Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+            </p>
+            <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+          </div>
+          <div class="col-md-5 text-center d-none d-md-block">
+            <img class="img-fluid" src="./assets/ebook-cover.png" alt="ebook cover" />
+          </div>
+        </div>
+      </div>
+    </section>
 
     <!-- Bootstrap -->
     <script
