--- a/index.html
+++ b/index.html
@@ -17,6 +17,49 @@
   </head>
   <body>
     <!-- navbar -->
+    <nav class="navbar navbar-expand-md navbar-light">
+      <div class="container-xxl">
+        <a href="#intro" class="navbar-brand">
+          <span class="fw-bold text-secondary"> Net Ninja Pro - the book </span>
+        </a>
+        <!-- togle button for mobile nav -->
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#main-nav"
+          aria-controls="main-nav"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <!-- navbar links -->
+        <div
+          class="collpase navbar-collapse justify-content-end align-center"
+          id="main-nav"
+        >
+          <ul class="navbar-nav">
+            <li class="nav-item">
+              <a class="nav-link" href="#topics">About The Book</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#reviews">Reviews</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#contact">Get in Touch</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#pricing">Pricing</a>
+            </li>
+            <li class="nav-item ms-2 d-none d-md-inline">
+              <a href="" class="btn btn-secondary" href="#pricing">Buy now</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
     <!-- main image & intro text -->
     <section class="intro">
@@ -30,7 +73,7 @@
             <p class="lead my-4 text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             </p>
-            <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+            <a href="#pricing" class="btn btn-secondary btn-lg">buy Now</a>
           </div>
           <div class="col-md-5 text-center d-none d-md-block">
             <img class="img-fluid" src="./assets/ebook-cover.png" alt="ebook cover" />
