--- a/index.html
+++ b/index.html
@@ -76,7 +76,11 @@
             <a href="#pricing" class="btn btn-secondary btn-lg">buy Now</a>
           </div>
           <div class="col-md-5 text-center d-none d-md-block">
-            <img class="img-fluid" src="./assets/ebook-cover.png" alt="ebook cover" />
+            <img
+              class="img-fluid"
+              src="./assets/ebook-cover.png"
+              alt="ebook cover"
+            />
           </div>
         </div>
       </div>
@@ -98,26 +102,34 @@
                 <p class="lead card-subtitle">eBook download only</p>
                 <p class="display-5 my-4 text-primary fw-bold">$12.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
-                  magni! Repellat commodi a fuga corporis saepe dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
+                  dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
+                  Buy Now
+                </a>
               </div>
             </div>
           </div>
 
           <div class="col-9 col-lg-4">
             <div class="card border-primary border-2">
-              <div class="card-header text-center text-primary">Most Popular</div>
+              <div class="card-header text-center text-primary">
+                Most Popular
+              </div>
               <div class="card-body text-center py-5">
                 <h4 class="card-title">Complete Edition</h4>
                 <p class="lead card-subtitle">eBook download & all updates</p>
                 <p class="display-4 my-4 text-primary fw-bold">$18.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
-                  magni! Repellat commodi a fuga corporis saepe dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
+                  dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
+                  Buy Now
+                </a>
               </div>
             </div>
           </div>
@@ -129,10 +141,180 @@
                 <p class="lead card-subtitle">download, updates & extras</p>
                 <p class="display-5 my-4 text-primary fw-bold">$24.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
-                  magni! Repellat commodi a fuga corporis saepe dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
+                  dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
+                  Buy Now
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- topics and glance -->
+    <section id="topics">
+      <div class="container-md">
+        <div class="text-center">
+          <h2>Inside the Book...</h2>
+          <p class="lead text-muted">
+            A quick glance at the topics you'll learn
+          </p>
+        </div>
+
+        <div class="row my-5 g-5 justify-content-around align-items-center">
+          <div class="col-6 col-lg-4">
+            <img src="/assets/kindle.png" class="img-fluid" alt="eBook" />
+          </div>
+
+          <div class="col-lg-6">
+            <!-- accordion -->
+            <div class="accordion" id="chapters">
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading-1">
+                  <button
+                    class="accordion-button"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-1"
+                    aria-expanded="true"
+                    aria-controls="chapter-1"
+                  >
+                    Chapter 1 - Your First Web Page
+                  </button>
+                </h2>
+                <div
+                  id="chapter-1"
+                  class="accordion-collapse collapse show"
+                  aria-labelledby="heading-1"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Accusantium voluptates similique minima modi, doloribus
+                      repellendus fuga praesentium eaque minus dolor.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Repellat amet dolorum quaerat fuga voluptatibus
+                      repudiandae maxime, corrupti eius hic, adipisci non
+                      repellendus tempore necessitatibus similique id labore
+                      quibusdam accusamus nulla!
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading-2">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-2"
+                    aria-expanded="true"
+                    aria-controls="chapter-2"
+                  >
+                    Chapter 2 - Mastering CSS
+                  </button>
+                </h2>
+                <div
+                  id="chapter-2"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading-2"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Accusantium voluptates similique minima modi, doloribus
+                      repellendus fuga praesentium eaque minus dolor.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Repellat amet dolorum quaerat fuga voluptatibus
+                      repudiandae maxime, corrupti eius hic, adipisci non
+                      repellendus tempore necessitatibus similique id labore
+                      quibusdam accusamus nulla!
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading-3">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-3"
+                    aria-expanded="false"
+                    aria-controls="chapter-3"
+                  >
+                    Chapter 3 - The Power of Javascript
+                  </button>
+                </h2>
+                <div
+                  id="chapter-3"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading-3"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Accusantium voluptates similique minima modi, doloribus
+                      repellendus fuga praesentium eaque minus dolor.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Repellat amet dolorum quaerat fuga voluptatibus
+                      repudiandae maxime, corrupti eius hic, adipisci non
+                      repellendus tempore necessitatibus similique id labore
+                      quibusdam accusamus nulla!
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="accordion-item">
+                <h2 class="accordion-header" id="heading-4">
+                  <button
+                    class="accordion-button collapsed"
+                    type="button"
+                    data-bs-toggle="collapse"
+                    data-bs-target="#chapter-4"
+                    aria-expanded="true"
+                    aria-controls="chapter-4"
+                  >
+                    Chapter 4 - Storing Data (Firebase Databases)
+                  </button>
+                </h2>
+                <div
+                  id="chapter-4"
+                  class="accordion-collapse collapse"
+                  aria-labelledby="heading-4"
+                  data-bs-parent="#chapters"
+                >
+                  <div class="accordion-body">
+                    <p>
+                      Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                      Accusantium voluptates similique minima modi, doloribus
+                      repellendus fuga praesentium eaque minus dolor.
+                    </p>
+                    <p>
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                      Repellat amet dolorum quaerat fuga voluptatibus
+                      repudiandae maxime, corrupti eius hic, adipisci non
+                      repellendus tempore necessitatibus similique id labore
+                      quibusdam accusamus nulla!
+                    </p>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
