--- a/index.html
+++ b/index.html
@@ -322,6 +322,66 @@
       </div>
     </section>
 
+    <!-- reviews list -->
+    <section id="reviews" class="bg-light">
+      <div class="container-lg">
+        <div class="text-center">
+          <h2>Book Reviews</h2>
+          <p class="lead">What my students have said about the book</p>
+        </div>
+
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <div class="list-group gap-2">
+              <div class="list-group-item py-3">
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sapiente enim culpa cum doloribus, ab architecto similique
+                  delectus, cupiditate aut, sint vel incidunt distinctio officia
+                  amet vitae nemo placeat non. Consectetur!
+                </p>
+                <small>Review by Mario</small>
+              </div>
+
+              <div class="list-group-item py-3">
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sapiente enim culpa cum doloribus, ab architecto similique
+                  delectus, cupiditate aut, sint vel incidunt distinctio officia
+                  amet vitae nemo placeat non. Consectetur!
+                </p>
+                <small>Review by Mario</small>
+              </div>
+
+              <div class="list-group-item py-3">
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sapiente enim culpa cum doloribus, ab architecto similique
+                  delectus, cupiditate aut, sint vel incidunt distinctio officia
+                  amet vitae nemo placeat non. Consectetur!
+                </p>
+                <small>Review by Mario</small>
+              </div>
+
+              <div class="list-group-item py-3">
+                <h5 class="mb-1">A must buy for every aspiring web dev</h5>
+                <p class="mb-1">
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+                  Sapiente enim culpa cum doloribus, ab architecto similique
+                  delectus, cupiditate aut, sint vel incidunt distinctio officia
+                  amet vitae nemo placeat non. Consectetur!
+                </p>
+                <small>Review by Mario</small>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
