--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.6.1/font/bootstrap-icons.css"
+    />
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
@@ -20,7 +24,10 @@
     <nav class="navbar navbar-expand-md navbar-light">
       <div class="container-xxl">
         <a href="#intro" class="navbar-brand">
-          <span class="fw-bold text-secondary"> Net Ninja Pro - the book </span>
+          <span class="fw-bold text-secondary">
+            <i class="bi bi-book-half"></i>
+            Net Ninja Pro - the book
+          </span>
         </a>
         <!-- togle button for mobile nav -->
         <button
@@ -326,14 +333,24 @@
     <section id="reviews" class="bg-light">
       <div class="container-lg">
         <div class="text-center">
-          <h2>Book Reviews</h2>
+          <h2>
+            <i class="bi bi-stars"></i>
+            Book Reviews
+          </h2>
           <p class="lead">What my students have said about the book</p>
         </div>
 
-        <div class="row justify-content-center">
+        <div class="row justify-content-center my-5">
           <div class="col-lg-8">
             <div class="list-group gap-2">
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -345,6 +362,13 @@
               </div>
 
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -356,6 +380,13 @@
               </div>
 
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
@@ -367,6 +398,13 @@
               </div>
 
               <div class="list-group-item py-3">
+                <div class="pb-2">
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-fill"></i>
+                  <i class="bi bi-star-half"></i>
+                </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
                   Lorem ipsum dolor sit, amet consectetur adipisicing elit.
