creating tooltips and modal

--- a/index.html
+++ b/index.html
@@ -83,11 +83,10 @@
             <a href="#pricing" class="btn btn-secondary btn-lg">buy Now</a>
           </div>
           <div class="col-md-5 text-center d-none d-md-block">
-            <img
-              class="img-fluid"
-              src="./assets/ebook-cover.png"
-              alt="ebook cover"
-            />
+            <!-- tolltip -->
+            <span class="tt" data-bs-placement="bottom" title="Net Ninja Book Cover">
+              <img class="img-fluid" src="./assets/ebook-cover.png" alt="ebook cover" />
+            </span>
           </div>
         </div>
       </div>
@@ -109,34 +108,26 @@
                 <p class="lead card-subtitle">eBook download only</p>
                 <p class="display-5 my-4 text-primary fw-bold">$12.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
-                  dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
+                  magni! Repellat commodi a fuga corporis saepe dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
-                  Buy Now
-                </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
               </div>
             </div>
           </div>
 
           <div class="col-9 col-lg-4">
             <div class="card border-primary border-2">
-              <div class="card-header text-center text-primary">
-                Most Popular
-              </div>
+              <div class="card-header text-center text-primary">Most Popular</div>
               <div class="card-body text-center py-5">
                 <h4 class="card-title">Complete Edition</h4>
                 <p class="lead card-subtitle">eBook download & all updates</p>
                 <p class="display-4 my-4 text-primary fw-bold">$18.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
-                  dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
+                  magni! Repellat commodi a fuga corporis saepe dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
-                  Buy Now
-                </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
               </div>
             </div>
           </div>
@@ -148,13 +139,10 @@
                 <p class="lead card-subtitle">download, updates & extras</p>
                 <p class="display-5 my-4 text-primary fw-bold">$24.99</p>
                 <p class="card-text mx-5 text-muted d-none d-lg-block">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Mollitia, vitae magni! Repellat commodi a fuga corporis saepe
-                  dolorum.
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Mollitia, vitae
+                  magni! Repellat commodi a fuga corporis saepe dolorum.
                 </p>
-                <a href="#" class="btn btn-outline-primary btn-lg mt-3">
-                  Buy Now
-                </a>
+                <a href="#" class="btn btn-outline-primary btn-lg mt-3"> Buy Now </a>
               </div>
             </div>
           </div>
@@ -167,9 +155,7 @@
       <div class="container-md">
         <div class="text-center">
           <h2>Inside the Book...</h2>
-          <p class="lead text-muted">
-            A quick glance at the topics you'll learn
-          </p>
+          <p class="lead text-muted">A quick glance at the topics you'll learn</p>
         </div>
 
         <div class="row my-5 g-5 justify-content-around align-items-center">
@@ -202,15 +188,14 @@
                   <div class="accordion-body">
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Accusantium voluptates similique minima modi, doloribus
-                      repellendus fuga praesentium eaque minus dolor.
+                      Accusantium voluptates similique minima modi, doloribus repellendus
+                      fuga praesentium eaque minus dolor.
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Repellat amet dolorum quaerat fuga voluptatibus
-                      repudiandae maxime, corrupti eius hic, adipisci non
-                      repellendus tempore necessitatibus similique id labore
-                      quibusdam accusamus nulla!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                      amet dolorum quaerat fuga voluptatibus repudiandae maxime, corrupti
+                      eius hic, adipisci non repellendus tempore necessitatibus similique
+                      id labore quibusdam accusamus nulla!
                     </p>
                   </div>
                 </div>
@@ -238,15 +223,14 @@
                   <div class="accordion-body">
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Accusantium voluptates similique minima modi, doloribus
-                      repellendus fuga praesentium eaque minus dolor.
+                      Accusantium voluptates similique minima modi, doloribus repellendus
+                      fuga praesentium eaque minus dolor.
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Repellat amet dolorum quaerat fuga voluptatibus
-                      repudiandae maxime, corrupti eius hic, adipisci non
-                      repellendus tempore necessitatibus similique id labore
-                      quibusdam accusamus nulla!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                      amet dolorum quaerat fuga voluptatibus repudiandae maxime, corrupti
+                      eius hic, adipisci non repellendus tempore necessitatibus similique
+                      id labore quibusdam accusamus nulla!
                     </p>
                   </div>
                 </div>
@@ -274,15 +258,14 @@
                   <div class="accordion-body">
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Accusantium voluptates similique minima modi, doloribus
-                      repellendus fuga praesentium eaque minus dolor.
+                      Accusantium voluptates similique minima modi, doloribus repellendus
+                      fuga praesentium eaque minus dolor.
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Repellat amet dolorum quaerat fuga voluptatibus
-                      repudiandae maxime, corrupti eius hic, adipisci non
-                      repellendus tempore necessitatibus similique id labore
-                      quibusdam accusamus nulla!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                      amet dolorum quaerat fuga voluptatibus repudiandae maxime, corrupti
+                      eius hic, adipisci non repellendus tempore necessitatibus similique
+                      id labore quibusdam accusamus nulla!
                     </p>
                   </div>
                 </div>
@@ -310,15 +293,14 @@
                   <div class="accordion-body">
                     <p>
                       Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                      Accusantium voluptates similique minima modi, doloribus
-                      repellendus fuga praesentium eaque minus dolor.
+                      Accusantium voluptates similique minima modi, doloribus repellendus
+                      fuga praesentium eaque minus dolor.
                     </p>
                     <p>
-                      Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                      Repellat amet dolorum quaerat fuga voluptatibus
-                      repudiandae maxime, corrupti eius hic, adipisci non
-                      repellendus tempore necessitatibus similique id labore
-                      quibusdam accusamus nulla!
+                      Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat
+                      amet dolorum quaerat fuga voluptatibus repudiandae maxime, corrupti
+                      eius hic, adipisci non repellendus tempore necessitatibus similique
+                      id labore quibusdam accusamus nulla!
                     </p>
                   </div>
                 </div>
@@ -353,10 +335,10 @@
                 </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Sapiente enim culpa cum doloribus, ab architecto similique
-                  delectus, cupiditate aut, sint vel incidunt distinctio officia
-                  amet vitae nemo placeat non. Consectetur!
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim
+                  culpa cum doloribus, ab architecto similique delectus, cupiditate aut,
+                  sint vel incidunt distinctio officia amet vitae nemo placeat non.
+                  Consectetur!
                 </p>
                 <small>Review by Mario</small>
               </div>
@@ -371,10 +353,10 @@
                 </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Sapiente enim culpa cum doloribus, ab architecto similique
-                  delectus, cupiditate aut, sint vel incidunt distinctio officia
-                  amet vitae nemo placeat non. Consectetur!
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim
+                  culpa cum doloribus, ab architecto similique delectus, cupiditate aut,
+                  sint vel incidunt distinctio officia amet vitae nemo placeat non.
+                  Consectetur!
                 </p>
                 <small>Review by Mario</small>
               </div>
@@ -389,10 +371,10 @@
                 </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Sapiente enim culpa cum doloribus, ab architecto similique
-                  delectus, cupiditate aut, sint vel incidunt distinctio officia
-                  amet vitae nemo placeat non. Consectetur!
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim
+                  culpa cum doloribus, ab architecto similique delectus, cupiditate aut,
+                  sint vel incidunt distinctio officia amet vitae nemo placeat non.
+                  Consectetur!
                 </p>
                 <small>Review by Mario</small>
               </div>
@@ -407,10 +389,10 @@
                 </div>
                 <h5 class="mb-1">A must buy for every aspiring web dev</h5>
                 <p class="mb-1">
-                  Lorem ipsum dolor sit, amet consectetur adipisicing elit.
-                  Sapiente enim culpa cum doloribus, ab architecto similique
-                  delectus, cupiditate aut, sint vel incidunt distinctio officia
-                  amet vitae nemo placeat non. Consectetur!
+                  Lorem ipsum dolor sit, amet consectetur adipisicing elit. Sapiente enim
+                  culpa cum doloribus, ab architecto similique delectus, cupiditate aut,
+                  sint vel incidunt distinctio officia amet vitae nemo placeat non.
+                  Consectetur!
                 </p>
                 <small>Review by Mario</small>
               </div>
@@ -445,6 +427,16 @@
                   id="email"
                   placeholder="e.g. mario@example.com"
                 />
+                <!-- tooltip -->
+                <span class="input-group-text">
+                  <span
+                    class="tt"
+                    data-bs-placement="bottom"
+                    title="Enter an email address we can reply to."
+                  >
+                    <i class="bi bi-question-circle text-muted"></i>
+                  </span>
+                </span>
               </div>
 
               <label for="name" class="form-label">Name:</label>
@@ -458,6 +450,16 @@
                   id="name"
                   placeholder="e.g. Mario"
                 />
+                <!-- tooltip -->
+                <span class="input-group-text">
+                  <span
+                    class="tt"
+                    data-bs-placement="bottom"
+                    title="Pretty self explanatory really..."
+                  >
+                    <i class="bi bi-question-circle text-muted"></i>
+                  </span>
+                </span>
               </div>
 
               <label for="subject" class="form-label">
@@ -492,11 +494,85 @@
       </div>
     </section>
 
+    <!-- get updates/modal trigger -->
+    <section class="bg-light">
+      <div class="container">
+        <div class="text-center">
+          <h2>Stay in The Loop</h2>
+          <p class="lead">Get the latest updates as they happen...</p>
+        </div>
+        <div class="row justify-content-center">
+          <div class="col-md-8 text-center">
+            <p class="text-muted my-4">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Dicta dolore a quas
+              tempore rem vero non doloribus quod voluptatum ipsam magni modi, quaerat
+              nobis porro consequuntur mollitia minima ipsum commodi maiores. Iusto
+              delectus asperiores recusandae provident architecto nisi natus modi.
+            </p>
+            <button
+              class="btn btn-primary"
+              data-bs-toggle="modal"
+              data-bs-target="#reg-modal"
+            >
+              Register for updates
+            </button>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- modal itself -->
+    <div
+      class="modal fade"
+      id="reg-modal"
+      tabindex="-1"
+      aria-labelledby="modal-title"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <h5 class="modal-title" id="modal-title">Get the Latest Updates</h5>
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas nihil nulla
+              animi earum sunt vel, error in repellat nostrum? Asperiores provident
+              corporis eum quia expedita hic minus rem ad ducimus.
+            </p>
+            <label for="modal-email" class="form-label">Your email address: </label>
+            <input
+              type="email"
+              class="form-control"
+              id="modal-email"
+              placeholder="e.g. mario@example.com"
+            />
+          </div>
+          <div class="modal-footer">
+            <button class="btn btn-primary">Submit</button>
+          </div>
+        </div>
+      </div>
+    </div>
+
     <!-- Bootstrap -->
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
+
+    <script>
+      const tooltips = document.querySelectorAll('.tt');
+      tooltips.forEach((t) => {
+        new bootstrap.Tooltip(t);
+      });
+    </script>
   </body>
 </html>
