--- a/index.html
+++ b/index.html
@@ -80,7 +80,16 @@
             <p class="lead my-4 text-muted">
               Lorem ipsum dolor sit amet, consectetur adipisicing elit.
             </p>
-            <a href="#pricing" class="btn btn-secondary btn-lg">buy Now</a>
+            <a href="#pricing" class="btn btn-secondary btn-lg">Buy Now</a>
+            <!-- open sidebar/offcanvas -->
+            <a
+              href="#sidebar"
+              class="d-block mt-3"
+              data-bs-toggle="offcanvas"
+              role="button"
+              aria-controls="sidebar"
+              >Explore my other books</a
+            >
           </div>
           <div class="col-md-5 text-center d-none d-md-block">
             <!-- tolltip -->
@@ -558,6 +567,32 @@
             <button class="btn btn-primary">Submit</button>
           </div>
         </div>
+      </div>
+    </div>
+
+    <!-- offcanvas -->
+    <div
+      class="offcanvas offcanvas-end"
+      tabindex="-1"
+      id="sidebar"
+      aria-labelledby="sidebar-label"
+    >
+      <div class="offcanvas-header">
+        <h5 class="offcanvas-title" id="sidebar-label">My Other Books</h5>
+        <button
+          type="button"
+          class="btn-close"
+          data-bs-dismiss="offcanvas"
+          aria-label="Close"
+        ></button>
+      </div>
+      <div class="offcanvas-body">
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorem eaque nulla
+          impedit facere. Fugiat voluptatum expedita voluptatibus officia quia molestias
+          id consequatur dolorum? Fugit perferendis ducimus ipsum excepturi maxime
+          dolorum.
+        </p>
       </div>
     </div>
 
