--- a/index.html
+++ b/index.html
@@ -593,6 +593,22 @@
           id consequatur dolorum? Fugit perferendis ducimus ipsum excepturi maxime
           dolorum.
         </p>
+        <!-- dropdown -->
+        <div class="dropdown mt-3">
+          <button
+            class="btn btn-secondary dropdown-toggle"
+            type="button"
+            id="book-dropdown"
+            data-bs-toggle="dropdown"
+          >
+            Choose a book title
+          </button>
+          <ul class="dropdown-menu" aria-labelledby="book-dropdown">
+            <li><a href="#" class="dropdown-item">Become a React Superhero</a></li>
+            <li><a href="#" class="dropdown-item">Conquering Vue.js</a></li>
+            <li><a href="#" class="dropdown-item">Levelling up Your Next.js</a></li>
+          </ul>
+        </div>
       </div>
     </div>
 
